change caching config (not work before)

--- a/nginx_caching.conf
+++ b/nginx_caching.conf
@@ -32,7 +32,7 @@ http {
 
     #gzip  on;
 
-    proxy_cache_path  C:/nginx-1.13.8/cache  levels=1:2    keys_zone=hls:200m max_size=1g inactive=600m;
+	    proxy_cache_path  C:/nginx-1.13.8/cache  levels=1:2    keys_zone=hls:200m max_size=10g inactive=1440h;
     server {
         listen 80;
         server_name localhost;
@@ -41,7 +41,7 @@ http {
             add_header X-Proxy-Cache $upstream_cache_status;
             proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
         proxy_cache_lock on;
-        proxy_cache_valid any 1s;
+        proxy_cache_valid any 100d;
 
         location / {
             proxy_pass http://172.18.3.20;
